fix(keybind): z-index

--- a/quartz/components/styles/keybind.scss
+++ b/quartz/components/styles/keybind.scss
@@ -22,7 +22,7 @@ kbd {
   & > #shortcut-container {
     position: fixed;
     contain: layout;
-    z-index: 300;
+    z-index: 100;
     left: 0;
     top: 0;
     width: 100vw;
